--- a/simple-api/.github/workflows/main.yml
+++ b/simple-api/.github/workflows/main.yml
@@ -1,23 +1,25 @@
 name: CI devops 2025
+
 on:
-  #to begin you want to launch this job in main and develop
   push:
-    branches: - main
+    branches:
+      - main
   pull_request:
 
 jobs:
-  test-backend: 
+  test-backend:
     runs-on: ubuntu-24.04
     steps:
-     #checkout your github code using actions/checkout@v4
+      # Checkout your GitHub code using actions/checkout@v4
       - uses: actions/checkout@v4
 
-     #do the same with another action (actions/setup-java@v4) that enable to setup jdk 17
+      # Setup JDK 17 using actions/setup-java@v4
       - name: Set up JDK 17
-       uses: actions/setup-java@v4
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-     #finally build your app with the latest command
+
+      # Build and test with Maven
       - name: Build and test with Maven
         run: mvn clean verify
