--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,41 @@ on:
   pull_request:
 
 jobs:
+  build-and-push-docker-image:
+    needs: test-backend          # Attend que les tests soient OK
+    runs-on: ubuntu-24.04
+  
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+  
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+  
+      - name: Build and push backend image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./simple-api               # Chemin relatif où se trouve Dockerfile backend
+          push: true                         # Pousse l'image sur Docker Hub
+          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-simple-api-backend:latest
+  
+      - name: Build and push database image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./database                # À adapter selon emplacement Dockerfile DB
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-simple-api-database:latest
+  
+      - name: Build and push httpd image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./httpd                  # À adapter selon emplacement Dockerfile httpd
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-simple-api-httpd:latest
+
   test-backend:
     runs-on: ubuntu-24.04
     steps:
