--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,54 +7,52 @@ on:
   pull_request:
 
 jobs:
-  build-and-push-docker-image:
-    needs: test-backend          
-    runs-on: ubuntu-24.04
-  
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-  
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-  
-      - name: Build and push backend image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./simple-api              
-          push: true                         
-          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-simple-api-backend:latest
-  
-      - name: Build and push database image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./database                
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-simple-api-database:latest
-  
-      - name: Build and push httpd image
-        uses: docker/build-push-action@v6
-        with:
-          context: ./http-server                  
-          push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-simple-api-httpd:latest
-
   test-backend:
     runs-on: ubuntu-24.04
     steps:
-      # Checkout your GitHub code using actions/checkout@v4
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      # Setup JDK 17 using actions/setup-java@v4
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # Build and test with Maven
       - name: Build and test with Maven
         run: mvn --file simple-api/pom.xml clean verify
+
+  build-and-push-docker-image:
+    needs: test-backend
+    runs-on: ubuntu-24.04
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Build and push backend image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./simple-api
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tp-devops-simple-api-backend:latest
+
+      - name: Build and push database image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./database
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tp-devops-simple-api-database:latest
+
+      - name: Build and push httpd image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./http-server
+          push: ${{ github.ref == 'refs/heads/main' }}
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tp-devops-simple-api-httpd:latest
