--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,26 +33,26 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push backend image
         uses: docker/build-push-action@v6
         with:
           context: ./simple-api
           push: ${{ github.ref == 'refs/heads/main' }}
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tp-devops-simple-api-backend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-simple-api-backend:latest
 
       - name: Build and push database image
         uses: docker/build-push-action@v6
         with:
           context: ./database
           push: ${{ github.ref == 'refs/heads/main' }}
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tp-devops-simple-api-database:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-simple-api-database:latest
 
       - name: Build and push httpd image
         uses: docker/build-push-action@v6
         with:
           context: ./http-server
           push: ${{ github.ref == 'refs/heads/main' }}
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/tp-devops-simple-api-httpd:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-simple-api-httpd:latest
