--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,11 @@ jobs:
       - name: Build and test with Maven
         run: mvn --file simple-api/pom.xml clean verify
 
+      - name: Run SonarCloud analysis
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify sonar:sonar -Dsonar.projectKey=SLLNG_tp-devops-correction-docker -Dsonar.organization=SLLNG_tp-devops-correction-docker -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }} --file ./simple-api/pom.xml
+
   build-and-push-docker-image:
     needs: test-backend
     runs-on: ubuntu-24.04
